<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ScrollTableActivity!</string>
    <string name="app_name">WHUT</string>   
    <string name="jiaowuchu_name">教务处</string>
    <string name="library_name">图书馆</string>
    <string name="edit_jiao_hint">请输入学号</string>
    <string name="edit_library_hint">请输入卡号（前面加4个0）</string>
    <string name="edit_password_hint">请输入密码</string>
    <string name="jiao_id_text">学号</string>
    <string name="library_id_text">卡号</string>
    <string name="password_text">密码</string>
    <string name="login_button">登陆</string>
    <string name="offline_kebiao_button">辅助功能</string>
    <string name="offline_books_button">辅助功能</string>
    <string name="remember_password_checkbox">记住密码</string>
    <string name="imagebutton_content_description">下拉列表</string>
    <string name="about1">WHUT属于个人开发软件，仅支持Android平台，目的在于方便大家获取有关信息，如课表、图书借阅情况等，仅此而已。\n\n非常感谢您下载本软件，并进行试用，如果在使用过程中出现了什么问题或者有什么好的建议，
        可以通过以下方式联系我：\nEmail:withparadox2@gmail.com\n\n所有的数据均来自学校相关网站，此软件只充当一个中介平台，不会获取用户任何数据。
        另外，软件尚不完善，不建议经常使用一些譬如评教、续借等需要交互的功能，由于网站变更而带来的问题，我会及时修复，但本软件不承担相关责任。\n\n最后感谢大家对我的支持和鼓励，我在此衷心
        的祝福你们。\n\nBy withparadox2</string>
     <string name="search_book_button">图书搜索</string>
     
     <string name="timetable">课表</string>
     <string name="monday">星期一</string>
     <string name="tuesday">星期二</string>
     <string name="wednesday">星期三</string>
     <string name="thursday">星期四</string>
     <string name="friday">星期五</string>
</resources>