<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android" 
	    xmlns:app="http://schemas.android.com/apk/res/com.markupartist.android.actionbar.example"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/black"
        android:layout_marginTop="40dp"
	    android:orientation="vertical">
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_actionbar">   
	    
	<RelativeLayout
	    android:background="@color/black"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:gravity="center_horizontal">
	   
	    <RelativeLayout
	        android:id="@+id/tu_jiao_buttons" 
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
            android:layout_marginTop="50dp"
	        android:gravity="center_horizontal">
		    <Button
		        android:id="@+id/to_jiao_button"
		        android:layout_width="125dp"
		        android:layout_height="fill_parent"
		        android:textColor="@color/white"
                android:background="@drawable/to_jiao_button_selected"
		        android:text="@string/jiaowuchu_name"/>
		    <Button
		        android:layout_toRightOf="@id/to_jiao_button"
		        android:id="@+id/to_tu_button"
		        android:layout_width="125dp"
		        android:layout_height="fill_parent"
		        android:textColor="@color/white"
		        android:background="@drawable/to_tu_button_normal"
		        android:text="@string/library_name"/>
	    </RelativeLayout>

		<EditText
		    android:id="@+id/loginUserId"
			android:layout_width="250dp"
		    android:layout_height="40dp"		    
		    android:layout_marginTop="30dp"
		    android:layout_below="@id/tu_jiao_buttons" 
		    android:paddingLeft="55dp"
		    android:layout_centerHorizontal="true"
		    android:gravity="center_vertical"
		    
		    android:textSize="17sp"
		    android:background="@drawable/edit_text_bg"
		    android:textColor="@color/white"
		    android:hint="@string/edit_jiao_hint"/>
		
		<TextView
		    android:id="@+id/login_userid_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:gravity="center"
		    android:layout_alignBottom="@id/loginUserId"
		    android:layout_alignLeft="@id/loginUserId"
		    android:layout_alignTop="@id/loginUserId"	
		    
		    android:textSize="17sp"
		    android:textColor="@color/white"
		    android:text="@string/jiao_id_text"/>
		
		<LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="40dp"
		    android:layout_marginRight="10dp"
		    android:layout_alignRight="@id/loginUserId"
		    android:layout_alignBottom="@id/loginUserId"
		    android:layout_alignTop="@id/loginUserId"	
		    android:gravity="center"		    		    
		    android:orientation="horizontal">
			   <ImageButton 
				    android:contentDescription="@string/imagebutton_content_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:id="@+id/popup_button"
				    android:background="@drawable/more_select"/> 
		</LinearLayout>
		
		<EditText
		    android:id="@+id/loginUserPassword"
		    android:paddingLeft="55dp"
		    android:layout_width="250dp"
		    android:layout_height="40dp"
		    android:layout_alignLeft="@id/loginUserId"
		    android:layout_marginTop="10dp"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@id/loginUserId"
		    android:gravity="center_vertical"
		    android:password="true"
		    android:background="@drawable/edit_text_bg"
		    android:textSize="17sp"		    
		    android:textColor="@color/white"		    
		    android:hint="@string/edit_password_hint"/>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
			android:gravity="center"		    
		    android:layout_alignBottom="@id/loginUserPassword"
		    android:layout_alignLeft="@id/loginUserPassword"
		    android:layout_alignTop="@id/loginUserPassword"
		    android:textSize="17sp"	
		    android:textColor="@color/white"
		    android:text="@string/password_text"/>
		
		<RelativeLayout 
		    android:id="@+id/two_login_buttons"
		    android:layout_width="250dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@id/loginUserPassword">
            <CheckBox
                android:layout_marginTop="10dp" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
                android:id="@+id/remember_password"
                android:checked="false"
                android:button ="@drawable/btn_check_holo_dark"
                android:text="@string/remember_password_checkbox"/>			   
			<Button
			    style="@style/customButtonStyle"
			    android:id="@+id/loginButton"
			    android:layout_width="100dp"
			    android:layout_height="30dp"
			    android:layout_alignParentRight="true"
			    android:layout_centerVertical="true"
			    android:text="@string/login_button"/> 
			
		</RelativeLayout>
		
	   
	</RelativeLayout>
	</ScrollView>
</RelativeLayout>